force-app/main/default/objects/Sprint__c/Sprint__c.object-meta.xml
<CustomObject>
    <label>Sprint</label>
    <nameField>
        <displayFormat>Sprint-{0000}</displayFormat>
        <label>Sprint Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sprints</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>