force-app/main/default/objects/Sprint__c/fields/Number_User_Stories__c.field-meta.xml
<CustomField>
    <fullName>Number_User_Stories__c</fullName>
    <label>Number User Stories</label>
    <summaryForeignKey>User_Story__c.Sprint__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>