force-app/main/default/objects/Sprint__c/fields/Release_Date__c.field-meta.xml
<CustomField>
    <fullName>Release_Date__c</fullName>
    <label>Release Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>