force-app/main/default/objects/Sprint__c/fields/SIT_Date__c.field-meta.xml
<CustomField>
    <fullName>SIT_Date__c</fullName>
    <label>SIT Date</label>
    <type>Date</type>
</CustomField>