force-app/main/default/objects/Sprint__c/fields/UAT_Date__c.field-meta.xml
<CustomField>
    <fullName>UAT_Date__c</fullName>
    <label>UAT Date</label>
    <type>Date</type>
</CustomField>